# valid-social

./: .bumpversion.toml  .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
valid_social_cli/: main.py
valid_social_cli/commands/: login.py  post.py
valid_social_cli/services/: facebook.py  instagram.py  x.py
valid_social_cli/utils/: file_selector.py  get_media_files.py  stealth_browser.py
