[project]
name = "valid-social"
version = "0.1.3"
description = "Automate posting to multiple social media platforms right from your terminal."
authors = [
  { name = "Ibeh Precious (Valid)", email = "thevalidcode@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
  "typer[all]",
  "playwright",
]

[project.urls]
Homepage = "https://github.com/thevalidcode/valid-social"
Repository = "https://github.com/thevalidcode/valid-social"

[project.scripts]
valid-social = "valid_social_cli.main:app"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
